tests/paczka1/fuzzy1/27773878.err
Error in line 2: :QxkH A910 0,7
Error in line 1: 4Z0Q5 A123 2,6
Error in line 5: A910 A123 34,7
Error in line 19: ftTb A910 -3,8
Error in line 10: JYzJczFWvp A910 80,2
Error in line 23: JYzJczFWvp A829 66,0
Error in line 18: ftTb A910 37,3
Error in line 35: qQxkH A910 41,9
